--- a/Frontend Projects/03-Personal Portfolio/index.html
+++ b/Frontend Projects/03-Personal Portfolio/index.html
@@ -5,6 +5,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Personal Portfolio</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Edu+AU+VIC+WA+NT+Pre:wght@400..700&family=Permanent+Marker&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+    rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
 
@@ -31,23 +36,11 @@
     <div class="sections">
       <section class="projects">
         <h2>Projects</h2>
-        <ul>
-          <li>
-            <a href="#">HTML Only Portfolio</a>
-          </li>
-          <li>
-            <a href="#">Calculator</a>
-          </li>
-          <li>
-            <a href="#">Quiz App</a>
-          </li>
-          <li>
-            <a href="#">Countdown Timer</a>
-          </li>
-          <li>
-            <a href="#">Product Upcoming Page</a>
-          </li>
-        </ul>
+        <a href="#">HTML Only Portfolio</a>
+        <a href="#">Calculator</a>
+        <a href="#">Quiz App</a>
+        <a href="#">Countdown Timer</a>
+        <a href="#">Product Upcoming Page</a>
       </section>
       <section class="workExperience">
         <h2>Work Experience</h2>
@@ -65,11 +58,11 @@
       <section class="education">
         <h2>Education</h2>
         <p>
-          Graduated with 3.76 out of 4 <br>
-          GPA. Won Acme Hackathon. <br>
-          Organized 30 sessions.
+          Graduated with 3.76 out of 4 GPA. Won Acme Hackathon. Organized 30 sessions.
         </p>
+        <br>
         <p>Courses I took:</p>
+        <br>
         <ul>
           <li>Object Oriented Programming</li>
           <li>Data Structures and Algorithms</li>
@@ -83,28 +76,37 @@
         </ul>
       </section>
     </div>
-
     <aside class="reviews">
       <h2>Reviews from my Teachers</h2>
-      <div class="review">
-        <blockquote>
-          John Doe demonstrated exceptional dedication and creativity in his work.
-        </blockquote>
-        <footer>
-          <cite>Dr. Alice Smith</cite>, Senior Lecturer
-        </footer>
-      </div>
-      <div class="review">
-        <blockquote>
-          John's skills in frontend development are truly outstanding!
-        </blockquote>
-        <footer>
-          <cite>Prof. Bob Johnson</cite>, Head of Department
-        </footer>
+      <div class="reviewFlex">
+        <div class="review">
+          <blockquote>
+            John Doe demonstrated exceptional dedication and creativity in his work.
+          </blockquote>
+          <footer>
+            <cite>Dr. Alice Smith</cite>, Senior Lecturer
+          </footer>
+        </div>
+        <div class="review">
+          <blockquote>
+            John's skills in frontend development are truly outstanding!
+          </blockquote>
+          <footer>
+            <cite>Prof. Bob Johnson</cite>, Head of Department
+          </footer>
+        </div>
+        <div class="review">
+          <blockquote>
+            John's skills in frontend development are truly outstanding!
+          </blockquote>
+          <footer>
+            <cite>Prof. Bob Johnson</cite>, Head of Department
+          </footer>
+        </div>
       </div>
     </aside>
   </main>
-  <footer>
+  <footer class="footer">
     <p>&copy 2024 Chen Siyuan</p>
     <address>
       Contact: <a href="mailto:siyuancc123@gmail.com">siyuancc123@gmail.com</a>
