--- a/Frontend Projects/05-Testimonial Cards/index.html
+++ b/Frontend Projects/05-Testimonial Cards/index.html
@@ -19,7 +19,7 @@
           </p>
         </div>
         <div class="profile">
-          <img src="" alt="">
+          <img src="./pexels-photo-9762656.jpeg">
           <div class="profile-details">
             <h3>Siyuan Chen</h3>
             <p>Frontend Developer</p>
@@ -35,7 +35,7 @@
         </p>
       </div>
       <div class="profile-info">
-        <img src="" alt="">
+        <img src="./pexels-photo-9762656.jpeg" alt="">
         <div class="profile-details">
           <h3>Siyuan Chen</h3>
           <p>Frontend Developer</p>
@@ -43,7 +43,7 @@
       </div>
     </div>
     <div class="testimonial-card-3">
-      <img src="" alt="">
+      <img src="./pexels-photo-9762656.jpeg" alt="">
       <div class="testimonial-content">
         <div class="rating">★★★★★</div>
         <h3>Siyuan Chen</h3>
@@ -61,13 +61,13 @@
         landitiis repudiandae dolores dolorum eius ratione.
       </p>
       <div class="slider-profiles">
-        <span class="prev"></span>
-        <img src="" alt="">
-        <img src="" alt="">
-        <img src="" alt="">
-        <span class="next"></span>
-        <span class="profile-name">Austin Hill</span>
+        <span class="control prev">←</span>
+        <img src="./pexels-photo-9762656.jpeg" alt="">
+        <img class="active" src="./pexels-photo-9762656.jpeg" alt="">
+        <img src="./pexels-photo-9762656.jpeg" alt="">
+        <span class="control next">→</span>
       </div>
+      <span class="profile-name">Siyuan Chen</span>
     </div>
   </section>
 </body>
